# unison-common

./: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  Dockerfile.wheel  MANIFEST.in  P2.2_EXISTING_IMPLEMENTATION_REVIEW.md  P2.2_IMPLEMENTATION_PLAN.md  P2.2_IMPLEMENTATION_SUMMARY.md  PUBLISHING.md  README.md  SECURITY.md  generate_schema_docs.py  http_client.py  logging.py  publish.py  pyproject.toml  pytest.ini  schema_validation_examples.py  test_package.py  validate_package.py
.github/workflows/: build.yml  publish-wheel-container.yml  publish.yml  test-and-build.yml
schemas/: assistant-workflow.v1.schema.json  channel-gateway.v1.schema.json  ecosystem-expansion.v1.schema.json  event-envelope.json  household-coordination.v1.schema.json  multimodal_manifest.schema.json  principal-context.v1.schema.json  provider-blind-backup.v1.schema.json  trust-governance.v1.schema.json  trusted-request-envelope.v1.schema.json
src/unison_common/: __init__.py  audit_middleware.py  auth.py  auth_rs256.py  backup.py  baton.py  channel.py  consent.py  consent_rs256.py  datetime_utils.py  durability.py  envelope.py  governed_context.py  household.py  http_client.py  http_client_tracing.py  idempotency.py  idempotency_middleware.py  logging.py  monitoring.py  performance.py  phase1_trace.py  principal.py  principal_middleware.py  redaction.py  replay_endpoints.py  replay_store.py  schema_validation.py  tracing.py  tracing_middleware.py  trust.py  trust_governance.py  workflows.py
src/unison_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/unison_common/contracts/: __init__.py
src/unison_common/contracts/v1/: __init__.py  actions.py  context.py  events.py  intent.py  rom.py  speechio.py  trace.py
src/unison_common/models/: __init__.py  cli.py  errors.py  resolver.py
src/unison_common/multimodal/: __init__.py  manifest_client.py
src/unison_common/prompt/: __init__.py  cli.py  compiler.py  constants.py  engine.py  errors.py  http_service.py  injection.py  json_patch.py  layout.py  resources.py  schema.py  store.py  updates.py
src/unison_common/schemas/: __init__.py  assistant-workflow.v1.schema.json  capability-governance.v1.schema.json  ecosystem-expansion.v1.schema.json  governed-context.v2.schema.json  multimodal_manifest.schema.json  trust-governance.v1.schema.json
src/unison_common/schemas/modelpack/: manifest.v1.schema.json
src/unison_common/schemas/prompt/: __init__.py  identity.default.json  identity.schema.json  priorities.default.json  priorities.schema.json  unison_base.md
src/unison_common/speechio/: __init__.py  v1.py
src/unison_common/trace_artifacts/: __init__.py  recorder.py
tests/: test_auth_rs256.py  test_backup.py  test_baton.py  test_channel.py  test_consent.py  test_consent_enforcement.py  test_consent_rs256.py  test_consent_simple.py  test_context_snapshot_contract.py  test_contracts_v1.py  test_ecosystem_expansion_schema.py  test_envelope.py  test_envelope_validation.py  test_event_graph_contract.py  test_governed_context.py  test_governed_context_schema.py  test_household.py  test_http_client_resilience.py  test_integration_propagation.py  test_jwks_refresh.py  test_jwks_verifier.py  test_logging_enrichment.py  test_logging_redaction.py  test_model_packs.py  test_monitoring.py  test_multihop_consent_propagation.py  test_multihop_extended_propagation.py  test_multihop_inference_propagation.py  test_multihop_propagation.py  test_multimodal_manifest.py  test_performance.py  test_principal.py  test_principal_middleware.py  test_prompt_engine.py  test_redaction.py  test_replay_filtering.py  test_schema_validation.py  test_service_token_fallback.py  test_trace_artifacts.py  test_tracing.py  (+7 more)
tests/contract/: README.md  __init__.py  test_schema_contracts.py
