[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unison-common"
version = "0.0.1"
description = "Shared primitives for project-unisonOS services"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    { name = "project-unisonOS maintainers" }
]

dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "python-jose[cryptography]>=3.3.0",
    "bleach>=6.0.0",
    "redis>=5.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
