[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unison-common"
version = "0.1.0"
description = "Shared primitives for project-unisonOS services"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    { name = "project-unisonOS maintainers" }
]
keywords = ["unison", "microservices", "orchestration", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "bleach>=6.0.0",
    "redis>=5.0.0",
    "jsonschema>=4.17.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-propagator-b3>=1.21.0",
    "opentelemetry-propagator-jaeger>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/project-unisonOS/unison"
Documentation = "https://github.com/project-unisonOS/unison/blob/main/unison-common/README.md"
Repository = "https://github.com/project-unisonOS/unison.git"
"Bug Tracker" = "https://github.com/project-unisonOS/unison/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-jaeger==1.21.0",
    "opentelemetry-exporter-jaeger-proto-grpc==1.21.0",
    "opentelemetry-exporter-otlp==1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.21.0",
    "opentelemetry-propagator-b3==1.21.0",
    "opentelemetry-propagator-jaeger==1.21.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["unison_common", "unison_common.*"]

[tool.setuptools.package-data]
unison_common = ["py.typed", "schemas/*.json"]
