[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unison-common"
version = "0.1.0"
description = "Shared primitives for project-unisonOS services"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    { name = "project-unisonOS maintainers" }
]
keywords = ["unison", "microservices", "orchestration", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "fastapi>=0.115.0,<1",
    "pydantic>=2.12.0,<3",
    "httpx>=0.27.2",
    "PyJWT[crypto]>=2.10.0,<3",
    "cryptography>=41.0.0",
    "argon2-cffi>=23.1.0,<26",
    "bleach>=6.0.0",
    "redis>=5.0.0",
    "jsonschema>=4.17.0",
    "opentelemetry-api>=1.44.0,<2",
    "opentelemetry-sdk>=1.44.0,<2",
    "opentelemetry-instrumentation-fastapi>=0.65b0,<1",
    "opentelemetry-instrumentation-httpx>=0.65b0,<1",
    "opentelemetry-exporter-otlp>=1.44.0,<2",
    "opentelemetry-propagator-b3>=1.44.0,<2",
    "opentelemetry-propagator-jaeger>=1.44.0,<2"
]

[project.urls]
Homepage = "https://github.com/project-unisonOS/unison"
Documentation = "https://github.com/project-unisonOS/unison/blob/main/unison-common/README.md"
Repository = "https://github.com/project-unisonOS/unison.git"
"Bug Tracker" = "https://github.com/project-unisonOS/unison/issues"

[project.scripts]
unison-prompt-engine = "unison_common.prompt.cli:main"
unison-models = "unison_common.models.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["unison_common", "unison_common.*"]

[tool.setuptools.package-data]
unison_common = ["py.typed", "schemas/*.json", "schemas/prompt/*.json", "schemas/prompt/*.md", "schemas/modelpack/*.json"]
